2005-08-23  Yves Combe  <yves@ycombe.net>

	add gcompris_textview text editor tool with validation callback function (Bruno idea). And Python binding.
	Example in color.c, and in the Wordlist button in Boards configuration panel. Does nothing yet, work in progress.

	* src/boards/colors.c: (check_text), (colors_config_start):
	* src/boards/py-mod-gcompris.c: (pyGcomprisTextCallback),
	(py_gcompris_textview):
	* src/boards/python/admin/board_list.py:
	* src/gcompris/board_config.c: (gcompris_textview_destroy),
	(gcompris_textview_check), (gcompris_textview):
	* src/gcompris/board_config.h:
	* src/gcompris/gcompris_db.c: (gcompris_get_conf_with_table):

2005-08-23  bruno coudoin,,,  <set EMAIL_ADDRESS environment variable>

	Fixed maintenance of the wholegroup by using sqlite triggers
	This fixes several bugs in class edition. I'll look further
	this way to fix group and profile edition if needed.
	
	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/user_edit.py:
	* src/boards/python/admin/user_list.py:
	* src/gcompris/gcompris_db.c: (gcompris_db_init):

2005-08-22  Yves Combe  <yves@ycombe.net>

	add trace in get_conf and it's binding to control the key, value inversion bruno had.

	* src/boards/py-mod-gcompris.c: (pair_in_dict):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/gcompris/gcompris_db.c: (gcompris_get_conf_with_table):

2005-08-22  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: moved sweden geography to 1.1
	* src/boards/python/admin/group_edit.py: fixed 2 annoying bugs.
	  now we can edit a group without description and re-edit a group
	  without changing it's name

2005-08-22  Yves Combe  <yves@ycombe.net>

	add en entry in login, to enter typing the login. Configurable by profile.

	* src/boards/python/admin/board_list.py:
	* src/boards/python/login.py:

2005-08-22  Bruno coudoin  <bruno.coudoin@free.fr>
